# doclens-money-detect

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
config/: download.yaml  process.yaml  train.yaml
config/dataset/: ledgar.yaml
config/model/: deberta-v3-base.yaml
data/ledgar/: processed.dvc  raw.dvc
doclens/: cmd.py
doclens/data/: data_module.py  download.py  process.py
doclens/train/: money_text_classifier.py  train.py
